deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: airflow
  labels:
    app: airflow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: airflow
      version.type: released
  template:
    metadata:
      labels:
        app: airflow
        version.type: released
    spec:
      enableServiceLinks: false
      serviceAccountName: airflow
      terminationGracePeriodSeconds: 60
      containers:
      - name: webserver
        image: registry.local:5000/airflow
        imagePullPolicy: Always
        args:
        - webserver
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /admin/
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /opt/airflow/dags
          name: dags
          readOnly: true
        - mountPath: /opt/airflow/airflow.cfg
          subPath: airflow.cfg
          name: config
          readOnly: true
      - name: scheduler
        image: registry.local:5000/airflow
        imagePullPolicy: Always
        args:
        - scheduler
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /opt/airflow/dags
          name: dags
          readOnly: true
        - mountPath: /opt/airflow/airflow.cfg
          subPath: airflow.cfg
          name: config
          readOnly: true
      - name: git-sync
        image: k8s.gcr.io/git-sync:v3.1.6
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
        volumeMounts:
        - mountPath: /tmp/git
          name: dags
      volumes:
      - name: dags
        emptyDir: {}
      - name: config
        configMap:
          name: airflow-config
