scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: airflow
  name: airflow-scheduler
  namespace: airflow
spec:
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      serviceAccountName: airflow
      containers:
        - name: scheduler
          image: registry.local:5000/scheduler
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
          - mountPath: /dags
            name: git
        - name: git-sync
          image: k8s.gcr.io/git-sync:v3.1.6
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
          - mountPath: /tmp/git
            name: git
      volumes:
      - name: git
        emptyDir: {}
