service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: airflow
  labels:
    app: airflow
spec:
  selector:
    app: airflow
  ports:
    - name: http
      port: 80
      targetPort: http
