webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
  labels:
    app: airflow
spec:
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
        - name: webserver
          image: registry.local:5000/webserver
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /admin/
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
          - mountPath: /dags
            name: git
        - name: git-sync
          image: k8s.gcr.io/git-sync:v3.1.6
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
          - mountPath: /tmp/git
            name: git
      volumes:
      - name: git
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
  labels:
    app: airflow-webserver
spec:
  selector:
    app: airflow-webserver
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-webserver
  namespace: airflow
  labels:
    app: airflow
spec:
  rules:
    - host: airflow.local
      http:
        paths:
          - path: /
            backend:
              serviceName: airflow-webserver
              servicePort: http
